# ODACell

./: DemoClient.py  LICENSE  Neware_cycler_state.parquet  OT2_class.py  README.md  ZnCu_ZnCl-TU-SDS-NHP.duckdb  background_processes.py  camera.py  coordinate_funcs.py  coordinates.parquet  coordinates.xlsx  database_functions.py  dobbie_crimp.py  dobbie_grip.py  dobot_api.py  dobot_api_v2.py  dobot_class.py  interactive_ssh_test.py  main.py  main2.py  main_v2.py  main_v3.py  make_cells.xlsx  odacell_db.duckdb  odacell_states.py  qt_ui.py  quickstart.md  requirements.txt  robot_class.py  robot_class_v2.py  server.py  server_connection.py  socket_client.py  track_objs.parquet
side_computer/MyBO-main/: .gitignore  README.md  pyproject.toml
side_computer/MyBO-main/configs/: base.yaml
side_computer/MyBO-main/configs/acq/: bald.yaml  bqbc.yaml  ei.yaml  lognei.yaml  nehvi.yaml  nipv.yaml
side_computer/MyBO-main/configs/acqopt/: medium.yaml
side_computer/MyBO-main/configs/init/: sobol.yaml
side_computer/MyBO-main/configs/model/: fixednoise.yaml  fullybayesian.yaml  singletask.yaml
side_computer/MyBO-main/configs/task/: ZnCuAdditives_20250227.yaml  ZnCuAdditives_20250313.yaml  battery_demo.yaml
side_computer/MyBO-main/mybo/: __init__.py  interface.py  optimize.py
side_computer/MyBO-main/mybo/registry/: acquisitions.py  initialization.py  models.py  strategy.py
side_computer/MyBO-main/mybo/tasks/: registry.py
side_computer/MyBO-main/mybo/utils/: config.py  saving.py
side_computer/MyBO-main/scripts/: client_from_data.py  plot.py  remove_clients.py
(+57 files in other folders)
