[tool.poetry]
name = "mybo"
version = "0.1.0"
description = ""
authors = ["hvarfner <carl.hvarfner@live.se>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
botorch = "^0.9.2"
ax-platform = "^0.3.4"
torch = "2.0.0"
hydra-core = "^1.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
